Update config to no longer use deprecated and removed configurations